presentation-client/kube/base/presentation-static-files.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-static-files
spec:
  selector:
    app: presentation-static-files
    component: server
  ports:
  - name: http
    port: 80
    targetPort: http
