presentation-client/kube/base/presentation-static-files.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: presentation-static-files
spec:
  rules:
  - host: apps.v2tools.com
    http:
      paths:
      - path: /presentations/
        backend:
          serviceName: presentation-static-files
          servicePort: http
        
  tls:
  - hosts:
    - apps.v2tools.com
    secretName: apps-v2tools-crt
